# simple-password-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
simple_password_gen/: __init__.py  core.py
tests/: test_simple_password_gen.py
